Fixed bug on safari browser

--- a/src/styles/blocks/acardeon-team.scss
+++ b/src/styles/blocks/acardeon-team.scss
@@ -144,6 +144,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .team__info-left {
