--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,7 @@
 .header{
   display: flex;
   align-items: center;
-  padding-top: 1.25%;
+  padding-top: 0.75rem;
   flex: 0 0 auto;
   justify-content: space-between;
 
