--- a/src/styles/blocks/review.scss
+++ b/src/styles/blocks/review.scss
@@ -2,19 +2,19 @@
   position: relative;
   color: #fff;
 
-  @include tablets {
-    .review__hover {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
+  // @include tablets {
+  //   .review__hover {
+  //     opacity: 1;
+  //     transform: scale(1);
+  //   }
+  // }
 
-  &:hover {
-    .review__hover {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
+  // &:hover {
+  //   .review__hover {
+  //     opacity: 1;
+  //     transform: scale(1);
+  //   }
+  // }
 }
 
 .review__img-wrapper {
@@ -39,7 +39,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
+  opacity: 1;
   transform: scale(.8);
   transition: 0.3s;
   padding: 7%;
