--- a/src/styles/blocks/slidermenu.scss
+++ b/src/styles/blocks/slidermenu.scss
@@ -1,6 +1,5 @@
 .slider__container {
   height: 100vh;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  // width: 100vw;
   height: 90vh;
   padding: 10% 10%;
   position: relative;
